[tool.poetry]
name = "dlt-cert"
version = "0.1.0"
description = ""
authors = ["rafael.amorim <raffaekk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
dlt = {extras = ["duckdb"], version = "^1.18.2"}
google-cloud-bigquery = "^3.11.0"
db-dtypes = "^1.1.1"
grpcio = "^1.51.0"
pandas = "^2.3.3"
sqlalchemy = "^2.0.44"
google-cloud-bigquery-storage = "^2.34.0"
pymysql = "^1.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
